# final_project_platzman_paul

celebrity_bucks_game_player_advantage/: CONTRIBUTING.rst  Celebrity_Bucks_GPA_Package_Tutorial.ipynb  LICENSE  README.md  pyproject.toml
celebrity_bucks_game_player_advantage/celebrity_bucks_game_player_advantage/: create_celebrity_data_set.py
celebrity_bucks_game_player_advantage/data/: celebrity_data_attributes.csv  celebrity_data_attributes_2020-12-11_19_46_49.csv
celebrity_bucks_game_player_advantage/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
celebrity_bucks_game_player_advantage/docs/source/: celebrity_bucks_game_player_advantage.rst  modules.rst
celebrity_bucks_game_player_advantage/tests/: test_celebrity_bucks_game_player_advantage.py  test_create_celebrity_data_set.py
