[tool.poetry]
name = "celebrity_bucks_game_player_advantage"
version = "0.1.0"
description = "Python package that provides Celebrity Bucks players with additional data to help inform game playing decisions!"
authors = ["Paul Platzman <pbp2113@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.1.5"
requests = "^2.25.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
codecov = "^2.1.10"
python-semantic-release = "^7.7.0"
flake8 = "^3.8.4"
sphinx = "^3.3.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
